--- a/docs/data-guide/toc.yml
+++ b/docs/data-guide/toc.yml
@@ -3,34 +3,18 @@
 - name: Data Architecture Guide
   href: index.md
   items:
-  - name: Traditional RDBMS
+  - name: Traditional RDBMS solutions
+    href: relational-data/index.md
     items:
-    - name: Concepts
-      items:
-      - name: Relational data
-        href: concepts/relational-data.md 
-      - name: Transactional data
-        href: concepts/transactional-data.md 
-      - name: Semantic modeling
-        href: concepts/semantic-modeling.md 
-    - name: Scenarios
-      items:
-      - name: Online transaction processing (OLTP)
-        href: scenarios/online-transaction-processing.md 
-      - name: Online analytical processing (OLAP)
-        href: scenarios/online-analytical-processing.md
-      - name: Data warehousing
-        href: scenarios/data-warehousing.md
-      - name: Extract, transform, and load (ETL)
-        href: scenarios/etl.md 
-    - name: Technology choices
-      items:
-      - name: Data warehouses
-        href: technology-choices/data-warehouses.md 
-      - name: Online analytical processing (OLAP)
-        href: technology-choices/olap-data-stores.md 
-      - name: Online transaction processing (OLTP)
-        href: technology-choices/oltp-data-stores.md 
+    - name: Online transaction processing (OLTP)
+      href: relational-data/online-transaction-processing.md 
+    - name: Data warehousing
+      href: relational-data/data-warehousing.md
+    - name: Online analytical processing (OLAP)
+      href: relational-data/online-analytical-processing.md
+    - name: Extract, transform, and load (ETL)
+      href: relational-data/etl.md 
+
   - name: Big Data and NoSQL
     items:
     - name: Concepts
